<resources>
    <string name="app_name">My Story App</string>
    <string name="signup">Register</string>
    <string name="login">Login</string>
    <string name="message_welcome_page">Share your lovely moments with My Story App !\nUpload your memorable photos and and write a notes !</string>
    <string name="title_welcome_page">Welcome to My Story App!</string>
    <string name="title_signup_page">Join My Story Today !</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="message_login_page">Login First</string>
    <string name="title_login_page">Share your stories here!</string>
    <string name="name">Name</string>
    <string name="copyright">Copyright© My Story by Fadli Naufal Rahman</string>
    <string name="message_main_page">Upload your stories, discover stories from around the world.</string>
    <string name="greeting">Hello %1$s,</string>
    <string name="logout">Exit</string>
    <string name="invalid_password">Too weak, password at least 6 characters</string>
    <string name="invalid_email">Fill with valid email</string>
    <string name="cannot_empty">Name cannot be empty</string>
    <string name="capture_image">capture</string>
    <string name="switch_camera">switch</string>
    <string name="register_success_message">"Your Account is Ready. Lets share your story !"</string>
    <string name="register_success_title">"Register Success !"</string>
    <string name="next">"Next"</string>
    <string name="register_failed_message">"Failed to register, try again !"</string>
    <string name="register_failed_title">"Register Failed !"</string>
    <string name="login_success_message">"Login Success"</string>
    <string name="login_success_title">"Great!"</string>
    <string name="login_failed_message">"Try again"</string>
    <string name="login_failed_title">"Login failed!"</string>
    <string name="continue_to">"continue"</string>
    <string name="language_settings">"Language Settings"</string>
    <string name="story_list">"List Story"</string>
    <string name="story_photo">"Story Photo"</string>
    <string name="post_story">Post Story</string>
    <string name="empty_story">Empty Story</string>
    <string name="uploaded_at">Uploaded at %1$s</string>
    <string name="story_detail">story detail</string>
    <string name="story_image">story image</string>
    <string name="description">description....</string>
    <string name="add_story">add story</string>
    <string name="image_preview">image preview</string>
    <string name="gallery">gallery</string>
    <string name="camera">camera</string>
    <string name="upload">upload</string>
    <string name="invalid_permission">need permission</string>
    <string name="no_file_uploaded">Both image and description must be filled.</string>
    <string name="information">Info</string>
    <string name="upload_success">Upload success !</string>
    <string name="upload_failed">Failed to upload, try again.</string>
    <string name="title_activity_maps">Maps Activity</string>
    <string name="retry">retry</string>
    <string name="list_story">list story</string>
    <string name="share_location">share your location</string>
    <string name="invalid_description">add description first</string>
    <string name="location_permission">enable your location permission</string>
    <string name="error_occurred">something went wrong</string>
    <string name="something_wrong">something went wrong</string>
</resources>